# ╔══════════════════════════════════════════════════════════╗
# ║  8. PlantUML — Diagramme d'états (RecipeStatus)          ║
# ╚══════════════════════════════════════════════════════════╝

---PLANTUML_ETATS---
@startuml Etats_RecipeStatus
skinparam backgroundColor #F6F1E8
skinparam stateBackgroundColor #FFFBEF
skinparam stateBorderColor #C9A45C
skinparam arrowColor #8E1F2F
skinparam noteBackgroundColor #FFFBEF
title États d'une recette — RecipeStatus

[*] --> DRAFT : Membre crée\nPOST /api/recipes

state DRAFT {
  DRAFT : Brouillon personnel
  DRAFT : Visible uniquement\npar le propriétaire et les admins
}
state PENDING {
  PENDING : En attente de validation
  PENDING : Visible par les admins
  PENDING : Notification admin créée
}
state PUBLISHED {
  PUBLISHED : Visible dans le catalogue public
  PUBLISHED : userId peut être NULL\n(SetNull si compte supprimé)
}

DRAFT --> DRAFT     : Membre modifie\nPATCH /api/recipes/:id
DRAFT --> PENDING   : Membre soumet\nPATCH /api/recipes/:id/submit
PENDING --> PUBLISHED : Admin publie\nPATCH /api/admin/recipes/:id/publish
PENDING --> DRAFT   : Admin refuse\n+ rejectionReason\nPATCH .../reject
PUBLISHED --> DRAFT : Admin dépublie\n(si nécessaire)
DRAFT --> [*]       : Membre supprime\nDELETE /api/recipes/:id
PUBLISHED --> [*]   : Admin supprime\nDELETE /api/admin/recipes/:id

note right of PENDING
  Côté front : badge
  de comptage dans la
  sidebar admin.
end note
@enduml

---FIN_PLANTUML_ETATS---